--- a/online-test-portal-react/src/Pages/Home/Home.module.css
+++ b/online-test-portal-react/src/Pages/Home/Home.module.css
@@ -1,19 +1,52 @@
 .container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   padding: 20px;
   margin: 0 auto;
-  max-width: 700px; /* Adjust as needed */
+  justify-content: space-evenly;
+}
+
+.questionContainer{
+  /* display:flex; */
+  width: 50%;
+  margin:0px 20px;
+  border:2px solid gray;
+  border-radius: 5px;
+  padding: 25px;
+
 }
 
 .question {
   margin-bottom: 20px;
-  text-align: center;
+  /* text-align: center; */
 }
 
 .questionText {
   font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.indicator {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 40%;  
+  border:2px solid grey;
+  border-radius: 5px;
+  padding: 20px;
+}
+
+.indicatorDiv {
+  display: flex;
+  width: 30px;
+  height: 30px;
+  margin: 5px;
+  background-color: red;
+  border-radius: 5px;
+  justify-content: center;
+  color: white;
+  align-items: center;
+  padding: 1.5px;
   font-weight: bold;
 }
 
@@ -48,6 +81,17 @@
   background-color: #f0f0f0;
 }
 
+.options {
+  display: flex; /* Maintain flexbox for responsiveness */
+  flex-direction: column; /* Align radio buttons vertically */
+  justify-content: space-between; /* Distribute options evenly */
+  margin-top: 10px;
+}
+
+.option {
+  margin: 5px 0; /* Adjust margin for spacing between options */
+}
+
 /* Add media queries for smaller screens (optional) */
 @media (max-width: 768px) {
   .container {
@@ -61,16 +105,4 @@
   .button {
     margin-bottom: 10px;
   }
-}
-
-.options {
-  display: flex; /* Maintain flexbox for responsiveness */
-  flex-direction: column; /* Align radio buttons vertically */
-  justify-content: space-between; /* Distribute options evenly */
-  margin-top: 10px;
-  
-}
-
-.option {
-  margin: 5px 0; /* Adjust margin for spacing between options */
 }
