--- a/online-test-portal-react/src/Pages/Home/Home.module.css
+++ b/online-test-portal-react/src/Pages/Home/Home.module.css
@@ -40,12 +40,61 @@
   transition: background-color 0.2s ease-in-out;
 }
 
+.submitButtonDiv {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.submitButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(85, 85, 245);
+  /* width: 200px; */
+  /* border: 2px solid grey; */
+  font-weight: 400;
+  color: white;
+  margin-top: 1rem;
+  width: 10%;
+  border-radius: 5px;
+  padding: 10px;
+  cursor: pointer;
+}
+
 .button:hover {
   background-color: #f0f0f0;
 }
 
-
 /* Add media queries for smaller screens (optional) */
+
+@media (max-width: 900px) {
+  .container {
+    max-width: 90%;
+  }
+
+  .submitButton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(85, 85, 245);
+    font-weight: 200;
+    color: white;
+    margin-top: 1rem;
+    width: 30%;
+    border-radius: 5px;
+    padding: 10px;
+    cursor: pointer;
+  }
+
+  .buttonContainer {
+    flex-direction: column;
+  }
+
+  .button {
+    margin-bottom: 10px;
+  }
+}
+
 @media (max-width: 768px) {
   .container {
     max-width: 90%;
