--- a/online-test-portal-react/src/Pages/FinalSubmit/FinalSubmit.module.css
+++ b/online-test-portal-react/src/Pages/FinalSubmit/FinalSubmit.module.css
@@ -1,29 +1,44 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    background-color: #f5f5f5; /* Adjust background color as needed */
-  }
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+  margin: 20px auto;
+  max-width: 700px;
+  text-align: center;
+  margin-top: 10rem;
+}
+
+.results {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  font-size: x-large;
+  font-weight: bold;
   
-  .heading {
-    font-size: 2rem;
-    font-weight: bold;
-    margin-bottom: 2rem;
-  }
-  
-  .submitButton {
-    padding: 1rem 2rem;
-    border: none;
-    border-radius: 5px;
-    background-color: #307bff; /* Adjust button color as needed */
-    color: white;
-    cursor: pointer;
-    transition: background-color 0.2s ease-in-out;
-  }
-  
-  .submitButton:hover {
-    background-color: #286090; /* Adjust button hover color as needed */
-  }
-  
+}
+
+.heading {
+  color: #333;
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.submission-info {
+  margin-top: 20px;
+}
+
+.submission-info h1 {
+  font-size: 20px;
+  color: #555;
+  margin-bottom: 10px;
+}
+
+.submission-info div {
+  margin-bottom: 10px;
+}
+
+.submission-info div span {
+  font-weight: bold;
+  margin-right: 5px;
+}
