--- a/online-test-portal-react/src/Pages/Login/Login.module.css
+++ b/online-test-portal-react/src/Pages/Login/Login.module.css
@@ -1,56 +1,80 @@
+/* Login.module.css */
+
+.login-container {
+  position: relative;
+  height: 100vh;
+}
+
 .loginform {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    margin: 0 auto; /* Center the form horizontally */
-    width: 300px; /* Adjust width as needed */
-    margin-top: 10rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 400px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.loginform h2 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.formgroup {
+  margin-bottom: 20px;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+input[type="text"],
+input[type="password"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.button {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.button:hover {
+  background-color: #0056b3;
+}
+
+/* Responsive Design */
+@media screen and (max-width: 600px) {
+  .loginform {
+    width: 90%;
   }
-  
-  .loginform h2 {
-    margin-bottom: 20px;
-    text-align: center;
+}
+
+/* Animation */
+.formgroup {
+  opacity: 0;
+  transform: translateY(-20px);
+  animation: fadeInUp 0.5s forwards;
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
   }
-  
-  .formgroup {
-    margin-bottom: 15px;
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
-  
-  .formgroup label {
-    display: block;
-    margin-bottom: 15px;
-  }
-  
-  .formgroup input {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    width: 100%;
-    box-sizing: border-box; /* Include padding in width calculation */
-  }
-  
-  /* .form-group input[type="password"] { */
-    /* Style password field differently if desired */
-  /* } */
-  
-  .button {
-    background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin-top: 10px;
-    cursor: pointer;
-    border-radius: 5px;
-  }
-  
-  .button:hover {
-    background-color: #45a049; /* Darker green on hover */
-  }
-  
+}
